--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     ports:
       - "5432:5432"
     env_file:
-      - example.env
+      - test.env
     volumes:
       - ./db/postgres:/var/lib/postgresql/data
